moved spring into own backend folder

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=demo
-spring.config.import=optional:file:.env[.properties]
+spring.config.import=optional:file:../.env[.properties]
 
 # Datasource-konfigurasjon for PostgreSQL
 spring.datasource.url=${DB_URL}
