--- a/.gitignore
+++ b/.gitignore
@@ -7,8 +7,10 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+# Frontend
 node_modules
 dist-ssr
+frontend/dist/
 *.local
 
 # Editor directories and files
