add aliases for global imports

--- a/frontend/react-app/tsconfig.app.json
+++ b/frontend/react-app/tsconfig.app.json
@@ -20,7 +20,14 @@
     "noUnusedLocals": false,
     "noUnusedParameters": false,
     "noFallthroughCasesInSwitch": true,
-    "noUncheckedSideEffectImports": true
+    "noUncheckedSideEffectImports": true,
+
+    // module aliases
+    "baseUrl": "src",
+    "paths": {
+      "@types": ["types/index.ts"]
+      // "@components/*": ["components/*"],
+    }
   },
   "include": ["src"]
 }
