will fix alias later..

--- a/frontend/react-app/tsconfig.app.json
+++ b/frontend/react-app/tsconfig.app.json
@@ -20,14 +20,14 @@
     "noUnusedLocals": false,
     "noUnusedParameters": false,
     "noFallthroughCasesInSwitch": true,
-    "noUncheckedSideEffectImports": true,
+    "noUncheckedSideEffectImports": true
 
     // module aliases
-    "baseUrl": "src",
-    "paths": {
-      "@types": ["types/index.ts"]
-      // "@components/*": ["components/*"],
-    }
+    // TODO --> FIX SENERE
+    // "baseUrl": ".",
+    // "paths": {
+    //   "@/*": ["src/*"]
+    // }
   },
   "include": ["src"]
 }
