fix db connection pool settings to prevent timeout

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -14,3 +14,13 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 # Greier for frontend
 spring.jpa.open-in-view=false
+
+# HikariCP connection pool settings
+# test timeout (for refreshing new connection in pool) LOWER than server
+spring.datasource.hikari.max-lifetime=300000  
+# 10 minutes (to keep idle connections alive)
+spring.datasource.hikari.idle-timeout=600000  
+# Ensure a reasonable minimum pool size
+spring.datasource.hikari.minimum-idle=10      
+# Adjust pool size based on load
+spring.datasource.hikari.maximum-pool-size=100 
