hotfix ts compiler options for build

--- a/frontend/react-app/tsconfig.node.json
+++ b/frontend/react-app/tsconfig.node.json
@@ -20,6 +20,5 @@
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true
   },
-  "include": ["vite.config.ts", "src/**/*", "src/theme/*", "src/theme.d.ts"],
-  "exclude": ["node_modules"]
+  "include": ["vite.config.ts"]
 }
