--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -77,6 +77,7 @@
 	</dependencies>
 
 	<build>
+  <finalName>Forde-GR1-ResirkuleringApp</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
