--- a/frontend/react-app/package.json
+++ b/frontend/react-app/package.json
@@ -18,6 +18,7 @@
     "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.3.0",
     "resirkulering-app": "file:",
+    "sonner": "^2.0.2",
     "styled-components": "^6.1.15"
   },
   "devDependencies": {
